Added a new endpoint to get all users' orders
